--- a/settings.html
+++ b/settings.html
@@ -11,6 +11,7 @@
 <body>
     <div class="stars-container"></div>
     
+
     <div id="main-content" class="main-content">
         <header class="ps-header">
             <div class="logo">
@@ -91,6 +92,7 @@
                 </div>
             </div>
         </section>
+        <!-- Footer removed as requested -->
     </div>
 
     <script src="particles.min.js"></script>
