--- a/games.html
+++ b/games.html
@@ -493,20 +493,17 @@
                     </div>
                 </div>
                 
-                <!-- Game 6 - Coming Soon -->
                 <div class="game-card">
                     <div class="game-card-image">
-                        <div style="background: linear-gradient(45deg, #05051a, #0d0d35); width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-rocket" style="font-size: 4rem; color: #00a9ff; text-shadow: 0 0 15px rgba(0, 169, 255, 0.8);"></i>
-                        </div>
+                        <img src="https://hc-cdn.hel1.your-objectstorage.com/s/v3/1ce53d73c859a00e39211ce5e00f346ba6d06abc_1748369830829.jpeg" alt="Gravity Puzzler">
                     </div>
                     <div class="game-card-content">
-                        <h3 class="game-card-title">More Games Coming Soon</h3>
-                        <p class="game-card-description">Our team is working on exciting new space-themed games. Stay tuned for new releases and updates to our arcade collection.</p>
+                        <h3 class="game-card-title">Gravity Puzzler</h3>
+                        <p class="game-card-description">Navigate through space puzzles by manipulating gravity direction. Guide your ship through obstacles, avoid black holes, and find the exit portal.</p>
                         <div class="game-card-footer">
-                            <span class="game-tag">Coming Soon</span>
-                            <button class="play-button" disabled style="opacity: 0.6; cursor: not-allowed;">
-                                Wait <i class="fas fa-hourglass-half"></i>
+                            <span class="game-tag">Puzzle</span>
+                            <button class="play-button" onclick="window.location.href='games/gravity-puzzler/index.html'">
+                                Play <i class="fas fa-chevron-right"></i>
                             </button>
                         </div>
                     </div>
