--- a/games.html
+++ b/games.html
@@ -556,6 +556,22 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="game-card">
+                    <div class="game-card-image">
+                        <img src="https://hc-cdn.hel1.your-objectstorage.com/s/v3/68b491515d93ac6d6003da08a262a1de047663fd_1748417081532.jpeg" alt="Galactic Convoy">
+                    </div>
+                    <div class="game-card-content">
+                        <h3 class="game-card-title">Galactic Convoy</h3>
+                        <p class="game-card-description">Escort a vital fleet of supply ships through dangerous asteroid fields and enemy attacks as you navigate to safety.</p>
+                        <div class="game-card-footer">
+                            <span class="game-tag">Action</span>
+                            <button class="play-button" onclick="window.location.href='games/galactic-convoy/index.html'">
+                                Play <i class="fas fa-chevron-right"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
