--- a/games.html
+++ b/games.html
@@ -572,6 +572,22 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="game-card">
+                    <div class="game-card-image">
+                        <img src="https://hc-cdn.hel1.your-objectstorage.com/s/v3/c41fce0cbc8edb93551965d1c0707c0e888ff484_screenshot_20250528_130413_anydesk.jpg" alt="Stellar Excavation">
+                    </div>
+                    <div class="game-card-content">
+                        <h3 class="game-card-title">Stellar Excavation</h3>
+                        <p class="game-card-description">Mine valuable resources from uncharted celestial bodies, navigating through treacherous terrain while managing your limited fuel supply.</p>
+                        <div class="game-card-footer">
+                            <span class="game-tag">Exploration</span>
+                            <button class="play-button" onclick="window.location.href='games/stellar-excavation/index.html'">
+                                Play <i class="fas fa-chevron-right"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
