--- a/games.html
+++ b/games.html
@@ -588,6 +588,22 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="game-card">
+                    <div class="game-card-image">
+                        <img src="https://hc-cdn.hel1.your-objectstorage.com/s/v3/9f062901caf48296e11ea7053c683d1e9d6c2c6c_screenshot_20250528_131442_anydesk.jpg" alt="Orbital Defense">
+                    </div>
+                    <div class="game-card-content">
+                        <h3 class="game-card-title">Orbital Defense</h3>
+                        <p class="game-card-description">Control an orbital defense platform to protect your planet from waves of alien invaders using various weapon systems.</p>
+                        <div class="game-card-footer">
+                            <span class="game-tag">Strategy</span>
+                            <button class="play-button" onclick="window.location.href='games/orbital-defense/index.html'">
+                                Play <i class="fas fa-chevron-right"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
